--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -11,7 +11,7 @@
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 100;
-	src: local(''),
+	src: local('☺'),
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-100.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-100.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+AC00-D7A3, U+0041-005A, U+0061-007A, U+0020-002F, U+003A-0040, U+005B-0060, U+007B-007E;
@@ -21,7 +21,7 @@
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 300;
-	src: local(''),
+	src: local('☺'),
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+AC00-D7A3, U+0041-005A, U+0061-007A, U+0020-002F, U+003A-0040, U+005B-0060, U+007B-007E;
@@ -31,7 +31,7 @@
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 400;
-	src: local(''),
+	src: local('☺'),
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-400.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-400.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+AC00-D7A3, U+0041-005A, U+0061-007A, U+0020-002F, U+003A-0040, U+005B-0060, U+007B-007E;
@@ -41,7 +41,7 @@
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 500;
-	src: local(''),
+	src: local('☺'),
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+AC00-D7A3, U+0041-005A, U+0061-007A, U+0020-002F, U+003A-0040, U+005B-0060, U+007B-007E;
@@ -51,7 +51,7 @@
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 700;
-	src: local(''),
+	src: local('☺'),
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+AC00-D7A3, U+0041-005A, U+0061-007A, U+0020-002F, U+003A-0040, U+005B-0060, U+007B-007E;
@@ -61,7 +61,7 @@
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 900;
-	src: local(''),
+	src: local('☺'),
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/noto-sans-kr/noto-sans-kr-v27-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+AC00-D7A3, U+0041-005A, U+0061-007A, U+0020-002F, U+003A-0040, U+005B-0060, U+007B-007E;
@@ -72,7 +72,7 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 100;
-	src: local(''),
+	src: local('☺'),
 		url('../font/roboto/roboto-v30-latin-100.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/roboto/roboto-v30-latin-100.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+0030-0039;
@@ -82,7 +82,7 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 300;
-	src: local(''),
+	src: local('☺'),
 		url('../font/roboto/roboto-v30-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/roboto/roboto-v30-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+0030-0039;
@@ -92,7 +92,7 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 400;
-	src: local(''),
+	src: local('☺'),
 		url('../font/roboto/roboto-v30-latin-400.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/roboto/roboto-v30-latin-400.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+0030-0039;
@@ -102,7 +102,7 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 500;
-	src: local(''),
+	src: local('☺'),
 		url('../font/roboto/roboto-v30-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/roboto/roboto-v30-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+0030-0039;
@@ -112,7 +112,7 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 700;
-	src: local(''),
+	src: local('☺'),
 		url('../font/roboto/roboto-v30-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/roboto/roboto-v30-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+0030-0039;
@@ -122,7 +122,7 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 900;
-	src: local(''),
+	src: local('☺'),
 		url('../font/roboto/roboto-v30-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
 		url('../font/roboto/roboto-v30-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 		unicode-range: U+0030-0039;
@@ -172,7 +172,6 @@
 		url('../font/nanum-square/NanumSquareEB.woff') format('woff'),
 		url('../font/nanum-square/NanumSquareEB.ttf') format('truetype');
 }
-
 /* nanum-square-ac-300 */
 @font-face {
 	font-family: 'NanumSquareAc';
