--- a/src/assets/css/components/base/UxButton.css
+++ b/src/assets/css/components/base/UxButton.css
@@ -11,31 +11,35 @@
 	width: 100%;
 	min-height: 4rem;
 	border-radius: .8rem;
-	border: .1rem solid var(--light2);
 	background-color: var(--light0);
+	box-shadow: inset 0 0 0 .1rem var(--light2);
 	font-size: 1.6rem;
 	color: var(--dark1);
 	letter-spacing: 0;
-	transition: all 250ms cubic-bezier(.65,.05,.36,1);
+	transition: box-shadow .1s cubic-bezier(.65,.05,.36,1);
 }
-.ux-button-label {
+.ux-button .ux-button-label {
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
-.ux-button-icon {
+.ux-button .ux-button-icon {
 	flex-shrink: 0;
+}
+/* UxButton Icon */
+.ux-button.icon .ux-button-base {
+	padding: 0;
+	min-height: initial;
+	border-radius: 0;
+	box-shadow: none;
 }
 /* UxButton Status */
 .ux-button .ux-button-base:hover {
-	border-color: var(--light3);
-	box-shadow: 0 0 0 .2rem var(--light1);
+	box-shadow: 0 0 0 .2rem var(--light2);
 }
 .ux-button .ux-button-base:focus {
-	border-color: var(--light3);
-	background-color: var(--light1);
+	box-shadow: inset 0 0 0 .2rem var(--light2);
 }
-
 /* UxButton Disabled */
 .ux-button.disabled .ux-button-base,
 .ux-button .ux-button-base:disabled {
@@ -45,5 +49,22 @@
 }
 .ux-button.disabled .ux-button-base:hover,
 .ux-button .ux-button-base:disabled:hover {
+	box-shadow: none;
+}
+/* UxButton in UxInput */
+.ux-input .ux-button.ux-input-submit {
+	height: 2.4rem;
+}
+.ux-input .ux-button.ux-input-submit .ux-button-base {
+	flex-shrink: 0;
+	padding: 0 0.8rem;
+	min-height: initial;
+	border-radius: .8rem;
+	background-color: var(--light1);
+	font-size: 1.4rem;
+	box-shadow: none;
+}
+.ux-input .ux-button-base:hover,
+.ux-input .ux-button-base:focus {
 	box-shadow: none;
 }
