--- a/src/assets/css/components/base/UxInput.css
+++ b/src/assets/css/components/base/UxInput.css
@@ -1,2 +1,83 @@
 /* UxInput */
-.ux-input {}
+.ux-input {
+	display: flex;
+	align-items: center;
+	gap: .8rem;
+	padding: 0 1.2rem;
+	height: 4rem;
+	border-radius: .8rem;
+	box-shadow: inset 0 0 0 .1rem var(--light2);
+	transition: box-shadow .1s ease-in-out;
+}
+.ux-input .ux-input-base {
+	flex-grow: 1;
+	flex-shrink: 0;
+	flex-basis: 0;
+	border: 0;
+	background-color: transparent;
+	caret-color: var(--dark3);
+}
+.ux-input .ux-input-base:focus,
+.ux-input .ux-input-base:focus-visible {
+	outline: none;
+}
+.ux-input.left .ux-input-base {
+	text-align: left;
+}
+.ux-input.right .ux-input-base {
+	text-align: right;
+}
+.ux-input.center .ux-input-base {
+	text-align: center;
+}
+/* UxInput Focus */
+.ux-input:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--light2);
+}
+/* UxInput Valid */
+.ux-input.valid {
+	box-shadow: inset 0 0 0 .1rem var(--valid);
+}
+.ux-input.valid:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--valid);
+}
+/* UxInput Invalid */
+.ux-input.invalid {
+	box-shadow: inset 0 0 0 .1rem var(--invalid);
+}
+.ux-input.invalid:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--invalid);
+}
+/* UxInput Readonly */
+.ux-input.readonly {
+	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light1);
+}
+.ux-input.readonly .ux-input-base,
+.ux-input.readonly .ux-input-prefix,
+.ux-input.readonly .ux-input-suffix,
+.ux-input.readonly .ux-input-timer {
+	color: var(--dark3);
+}
+/* UxInput Disabled */
+.ux-input.disabled {
+	box-shadow: inset 0 0 0 .1rem var(--light3);
+	background-color: var(--light2);
+}
+.ux-input.disabled .ux-input-base,
+.ux-input.disabled .ux-input-prefix,
+.ux-input.disabled .ux-input-suffix,
+.ux-input.disabled .ux-input-timer {
+	color: var(--dark3);
+}
+/* UxInput Particle */
+.ux-input-prefix {
+	flex-shrink: 0;
+}
+.ux-input-suffix {
+	flex-shrink: 0;
+}
+.ux-input-timer {
+	flex-shrink: 0;
+	color: var(--invalid);
+}
