--- a/src/assets/css/components/base/UxPassword.css
+++ b/src/assets/css/components/base/UxPassword.css
@@ -1,2 +1,56 @@
 /* UxPassword */
-.ux-password {}
+.ux-password {
+	display: flex;
+	align-items: center;
+	gap: .8rem;
+	padding: 0 1.2rem;
+	height: 4rem;
+	border-radius: .8rem;
+	box-shadow: inset 0 0 0 .1rem var(--light2);
+	transition: box-shadow .1s ease-in-out;
+}
+/* UxInput Focus */
+.ux-password:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--light2);
+}
+
+/* UxInput Valid */
+.ux-password.valid {
+	box-shadow: inset 0 0 0 .1rem var(--valid);
+}
+.ux-password.valid:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--valid);
+}
+/* UxInput Invalid */
+.ux-password.invalid {
+	box-shadow: inset 0 0 0 .1rem var(--invalid);
+}
+.ux-password.invalid:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--invalid);
+}
+/* UxInput Readonly */
+.ux-password.readonly {
+	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light1);
+}
+.ux-password.readonly .ux-input-base {
+	color: var(--dark3);
+}
+/* UxInput Disabled */
+.ux-password.disabled {
+	box-shadow: inset 0 0 0 .1rem var(--light3);
+	background-color: var(--light2);
+}
+.ux-password.disabled .ux-input-base {
+	color: var(--dark3);
+}
+/* UxInput Clear */
+.ux-password-clear {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-shrink: 0;
+	opacity: 0.75;
+	width: 1.6rem;
+	height: 1.6rem;
+}
