--- a/src/assets/css/components/base/UxText.css
+++ b/src/assets/css/components/base/UxText.css
@@ -2,24 +2,11 @@
 .ux-text {
 	display: flex;
 	align-items: flex-start;
-}
-/* UxText Prefix */
-.ux-text.prefix {
-	display: flex;
-	gap: .4rem;
-	font-size: var(--font-md)!important;
-}
-/* UxText Bullet */
-.ux-text.bullet {
-	display: flex;
 	gap: .4rem;
 }
-.ux-text.bullet .ux-text-bullet.dot::before {
-	content: "";
-	width: .4rem;
-	height: .4rem;
-	border-radius: 50%;
-	background-color: var(--dark3);
+.ux-text .ux-text-prefix {
+	display: inline-flex;
+	align-items: center;
 }
 /* UxText Size */
 .ux-text.xxs {font-size: var(--font-2xs);}
@@ -30,37 +17,40 @@
 .ux-text.xl {font-size: var(--font-xl);}
 .ux-text.xxl {font-size: var(--font-2xl);}
 .ux-text strong {font-weight: 700;}
-/* UxText Prefix, Bullet Height */
-.ux-text.prefix .ux-text-prefix,
-.ux-text.bullet .ux-text-bullet {
-	display: inline-flex;
-	align-items: center;
-}
-.ux-text.xxs.prefix .ux-text-prefix,
-.ux-text.xxs.bullet .ux-text-bullet {
+/* UxText Prefix Height */
+.ux-text.xxs .ux-text-prefix {
+	padding-top: calc((var(--font-2xs) * 1.5 - var(--font-2xs)) / 2);
 	height: calc(var(--font-2xs) * 1.5);
 }
-.ux-text.xs.prefix .ux-text-prefix,
-.ux-text.xs.bullet .ux-text-bullet {
+.ux-text.xs .ux-text-prefix {
+	padding-top: calc((var(--font-xs) * 1.5 - var(--font-xs)) / 2);
 	height: calc(var(--font-xs) * 1.5);
 }
-.ux-text.sm.prefix .ux-text-prefix,
-.ux-text.sm.bullet .ux-text-bullet {
+.ux-text.sm .ux-text-prefix {
+	padding-top: calc((var(--font-sm) * 1.5 - var(--font-sm)) / 2);
 	height: calc(var(--font-sm) * 1.5);
 }
-.ux-text.md.prefix .ux-text-prefix,
-.ux-text.md.bullet .ux-text-bullet {
+.ux-text.md .ux-text-prefix {
+	padding-top: calc((var(--font-md) * 1.5 - var(--font-md)) / 2);
 	height: calc(var(--font-md) * 1.5);
 }
-.ux-text.lg.prefix .ux-text-prefix,
-.ux-text.lg.bullet .ux-text-bullet {
+.ux-text.lg .ux-text-prefix {
+	padding-top: calc((var(--font-lg) * 1.5 - var(--font-lg)) / 2);
 	height: calc(var(--font-lg) * 1.5);
 }
-.ux-text.xl.prefix .ux-text-prefix,
-.ux-text.xl.bullet .ux-text-bullet {
+.ux-text.xl .ux-text-prefix {
+	padding-top: calc((var(--font-xl) * 1.5 - var(--font-xl)) / 2);
 	height: calc(var(--font-xl) * 1.5);
 }
-.ux-text.xxl.prefix .ux-text-prefix,
-.ux-text.xxl.bullet .ux-text-bullet {
+.ux-text.xxl .ux-text-prefix {
+	padding-top: calc((var(--font-2xl) * 1.5 - var(--font-2xl)) / 2);
 	height: calc(var(--font-2xl) * 1.5);
+}
+/* UxText Bullet */
+.ux-text.dot .ux-text-prefix::before {
+	content: "";
+	width: .4rem;
+	height: .4rem;
+	border-radius: 50%;
+	background-color: var(--dark3);
 }
