--- a/src/assets/css/components/base/UxPassword.css
+++ b/src/assets/css/components/base/UxPassword.css
@@ -9,26 +9,26 @@
 	box-shadow: inset 0 0 0 .1rem var(--light2);
 	transition: box-shadow .1s ease-in-out;
 }
-/* UxInput Focus */
+/* UxPassword Focus */
 .ux-password:focus-within {
 	box-shadow: inset 0 0 0 .2rem var(--light2);
 }
 
-/* UxInput Valid */
+/* UxPassword Valid */
 .ux-password.valid {
 	box-shadow: inset 0 0 0 .1rem var(--valid);
 }
 .ux-password.valid:focus-within {
 	box-shadow: inset 0 0 0 .2rem var(--valid);
 }
-/* UxInput Invalid */
+/* UxPassword Invalid */
 .ux-password.invalid {
 	box-shadow: inset 0 0 0 .1rem var(--invalid);
 }
 .ux-password.invalid:focus-within {
 	box-shadow: inset 0 0 0 .2rem var(--invalid);
 }
-/* UxInput Readonly */
+/* UxPassword Readonly */
 .ux-password.readonly {
 	box-shadow: inset 0 0 0 .1rem var(--light2);
 	background-color: var(--light1);
@@ -36,7 +36,7 @@
 .ux-password.readonly .ux-input-base {
 	color: var(--dark3);
 }
-/* UxInput Disabled */
+/* UxPassword Disabled */
 .ux-password.disabled {
 	box-shadow: inset 0 0 0 .1rem var(--light3);
 	background-color: var(--light2);
@@ -44,7 +44,7 @@
 .ux-password.disabled .ux-input-base {
 	color: var(--dark3);
 }
-/* UxInput Clear */
+/* UxPassword Clear */
 .ux-password-clear {
 	display: flex;
 	justify-content: center;
@@ -53,4 +53,12 @@
 	opacity: 0.75;
 	width: 1.6rem;
 	height: 1.6rem;
+}
+/* UxPassword in UxGroup */
+.ux-group.field .ux-password {
+	box-shadow: none;
+}
+.ux-group.field.readonly .ux-password,
+.ux-group.field.disabled .ux-password {
+	background-color: transparent;
 }
