--- a/src/assets/css/components/base/UxInput.css
+++ b/src/assets/css/components/base/UxInput.css
@@ -13,6 +13,7 @@
 	flex-grow: 1;
 	flex-shrink: 0;
 	flex-basis: 0;
+	width: 100%;
 	border: 0;
 	background-color: transparent;
 	caret-color: var(--dark3);
@@ -80,4 +81,12 @@
 .ux-input-timer {
 	flex-shrink: 0;
 	color: var(--invalid);
+}
+/* UxInput in UxGroup */
+.ux-group.field .ux-input {
+	box-shadow: none;
+}
+.ux-group.field.readonly .ux-input,
+.ux-group.field.disabled .ux-input {
+	background-color: transparent;
 }
