--- a/src/assets/css/components/mixin/UxField.css
+++ b/src/assets/css/components/mixin/UxField.css
@@ -1,2 +1,19 @@
 /* UxField */
 .ux-field {}
+.ux-field .ux-field-label {
+	padding-bottom: .8rem;
+	font-weight: 800;
+}
+.ux-field .ux-field-message {
+	padding-top: .4rem;
+	color: var(--dark3);
+}
+.ux-fieldd .ux-field-result {
+	padding-top: .4rem;
+}
+.ux-field.valid .ux-field-result {
+	color: var(--valid);
+}
+.ux-field.invalid .ux-field-result {
+	color: var(--invalid);
+}
