--- a/src/assets/css/components/mixin/UxGroup.css
+++ b/src/assets/css/components/mixin/UxGroup.css
@@ -11,7 +11,6 @@
 .ux-group.right {
 	text-align: right;
 }
-
 /* UxGroup Flex */
 .ux-group.flex {
 	display: flex;
@@ -56,4 +55,51 @@
 }
 .ux-group.grid.col4 {
 	grid-template-columns: repeat(4, 1fr);
+}
+/* UxGroup in UxField */
+.ux-group.field {
+	border-radius: .8rem;
+	box-shadow: inset 0 0 0 .1rem var(--light2);
+	transition: box-shadow .1s ease-in-out;
+}
+.ux-group.field:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--light2);
+}
+.ux-group.field.valid {
+	box-shadow: inset 0 0 0 .1rem var(--valid);
+}
+.ux-group.field.valid:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--valid);
+}
+.ux-group.field.invalid {
+	box-shadow: inset 0 0 0 .1rem var(--invalid);
+}
+.ux-group.field.invalid:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--invalid);
+}
+.ux-group.field.readonly {
+	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light1);
+	pointer-events: none;
+}
+.ux-group.field.disabled {
+	box-shadow: inset 0 0 0 .1rem var(--light3);
+	background-color: var(--light2);
+	pointer-events: none;
+}
+.ux-field .ux-group.field > * + * {
+	position: relative;
+}
+.ux-field .ux-group.field > * + *::before {
+	content: "-";
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 50%;
+	left: -.8rem;
+	width: .8rem;
+	height: 100%;
+	color: var(--light3);
+	transform: translateY(-50%);
 }
