--- a/src/assets/css/components/mixin/UxField.css
+++ b/src/assets/css/components/mixin/UxField.css
@@ -8,7 +8,7 @@
 	padding-top: .4rem;
 	color: var(--dark3);
 }
-.ux-fieldd .ux-field-result {
+.ux-field .ux-field-result {
 	padding-top: .4rem;
 }
 .ux-field.valid .ux-field-result {
