--- a/src/assets/css/components/base/UxBadge.css
+++ b/src/assets/css/components/base/UxBadge.css
@@ -1,2 +1,18 @@
 /* UxBadge */
-.ux-badge {}
+.ux-badge {
+	display: inline-flex;
+}
+.ux-badge .ux-badge-base {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: .2rem .6rem 0 .4rem;
+	min-width: 2rem;
+	height: 2rem;
+	border-radius: 1rem;
+	background-color: var(--color1);
+	font-weight: 700;
+	font-size: 1.2rem;
+	line-height: 1;
+	color: var(--light0);
+}
