--- a/src/assets/css/components/base/UxFile.css
+++ b/src/assets/css/components/base/UxFile.css
@@ -1,2 +1,62 @@
 /* UxFile */
-.ux-file {}
+.ux-file {
+	display: flex;
+	align-items: center;
+	gap: .8rem;
+	padding: 0 1.2rem;
+	height: 4rem;
+	border-radius: .8rem;
+	box-shadow: inset 0 0 0 .1rem var(--light2);
+	transition: box-shadow .1s ease-in-out;
+}
+.ux-file .ux-file-base {
+	display: flex;
+	align-items: center;
+	position: relative;
+	flex-grow: 1;
+	flex-shrink: 0;
+	flex-basis: 0;
+	width: 100%;
+	border: 0;
+}
+.ux-file .ux-file-base:focus,
+.ux-file .ux-file-base:focus-visible {
+	outline: none;
+}
+.ux-file .ux-file-input {
+	overflow: hidden;
+	visibility: visible;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 0;
+	height: 0;
+}
+.ux-file .ux-file-label {
+	line-height: 1;
+	color: var(--light3);
+}
+.ux-file .ux-file-label.path {
+	color: var(--dark0);
+}
+/* UxFile Focus */
+.ux-file:focus-within {
+	box-shadow: inset 0 0 0 .2rem var(--light3);
+}
+/* UxButton in UxFile */
+.ux-file .ux-button.ux-file-button {
+	height: 2.4rem;
+}
+.ux-file .ux-button.ux-file-button .ux-button-base {
+	flex-shrink: 0;
+	padding: 0 0.8rem;
+	min-height: initial;
+	border-radius: .8rem;
+	background-color: var(--light1);
+	font-size: 1.4rem;
+	box-shadow: none;
+}
+.ux-file .ux-button-base:hover,
+.ux-file .ux-button-base:focus {
+	box-shadow: none;
+}
