--- a/src/assets/css/components/base/UxLink.css
+++ b/src/assets/css/components/base/UxLink.css
@@ -1,2 +1,25 @@
 /* UxLink */
-.ux-link {}
+.ux-link {
+	flex-shrink: 0;
+	flex-basis: initial!important;
+}
+.ux-link .ux-link-base {
+	display: inline-flex;
+	align-items: center;
+	cursor: pointer;
+}
+.ux-link .ux-link-label {
+	position: relative;
+	line-height: 1;
+	word-break: keep-all;
+	color: var(--dark0);
+}
+.ux-link.underline .ux-link-label::after {
+	content: "";
+	position: absolute;
+	bottom: -.2rem;
+	left: 0;
+	width: 100%;
+	height: .1rem;
+	background-image: repeating-linear-gradient(to right, var(--light3), var(--light3) .1rem, var(--light0) .1rem, var(--light0) .4rem);
+}
