--- a/src/assets/css/icon.css
+++ b/src/assets/css/icon.css
@@ -2,9 +2,18 @@
 :root {
 	--icon-clear: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z'/%3E%3C/svg%3E");
 	--icon-calendar: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z'/%3E%3C/svg%3E");
+	--icon-checked: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z'/%3E%3C/svg%3E");
+	--icon-checked-square: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z'/%3E%3C/svg%3E");
+	--icon-unchecked-square: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M64 80c-8.8 0-16 7.2-16 16V416c0 8.8 7.2 16 16 16H384c8.8 0 16-7.2 16-16V96c0-8.8-7.2-16-16-16H64zM0 96C0 60.7 28.7 32 64 32H384c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z'/%3E%3C/svg%3E");
+	--icon-checked-circle: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z'/%3E%3C/svg%3E");
+	--icon-unchecked-circle: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z'/%3E%3C/svg%3E");
+	--icon-selected-circle: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-352a96 96 0 1 1 0 192 96 96 0 1 1 0-192z'/%3E%3C/svg%3E");
+	--icon-unselected-circle: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm256-96a96 96 0 1 1 0 192 96 96 0 1 1 0-192z'/%3E%3C/svg%3E");
+	--icon-arrow-right: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z'/%3E%3C/svg%3E");
 }
 
 [class*=ux-icon-] {
+	flex-shrink: 0;
 	display: inline-block;
 	vertical-align: top;
 	mask-position: 50% 50%;
@@ -20,14 +29,90 @@
 	mask-image: var(--icon-clear);
 	-webkit-mask-image: var(--icon-clear);
 	background-color: var(--dark3);
-	width: 16px;
-	height: 16px;
+	width: 1.6rem;
+	height: 1.6rem;
+}
+.ux-icon-clear.white {
+	mask-image: var(--icon-clear);
+	-webkit-mask-image: var(--icon-clear);
+	background-color: var(--light0);
+	width: 1.6rem;
+	height: 1.6rem;
 }
 /* Calendar */
 .ux-icon-calendar {
 	mask-image: var(--icon-calendar);
 	-webkit-mask-image: var(--icon-calendar);
 	background-color: var(--dark3);
-	width: 16px;
-	height: 16px;
+	width: 1.6rem;
+	height: 1.6rem;
+}
+/* Checked */
+.ux-icon-checked {
+	mask-image: var(--icon-checked);
+	-webkit-mask-image: var(--icon-checked);
+	background-color: var(--color1);
+	width: 1.6rem;
+	height: 1.6rem;
+}
+.ux-icon-unchecked {
+	mask-image: var(--icon-checked);
+	-webkit-mask-image: var(--icon-checked);
+	background-color: var(--dark3);
+	width: 1.6rem;
+	height: 1.6rem;
+}
+/* Checked Square */
+.ux-icon-checked-square {
+	mask-image: var(--icon-checked-square);
+	-webkit-mask-image: var(--icon-checked-square);
+	background-color: var(--color1);
+	width: 2.4rem;
+	height: 2.4rem;
+}
+.ux-icon-unchecked-square {
+	mask-image: var(--icon-unchecked-square);
+	-webkit-mask-image: var(--icon-unchecked-square);
+	background-color: var(--dark3);
+	width: 2.4rem;
+	height: 2.4rem;
+}
+/* Checked Circle */
+.ux-icon-checked-circle {
+	mask-image: var(--icon-checked-circle);
+	-webkit-mask-image: var(--icon-checked-circle);
+	background-color: var(--color1);
+	width: 2.4rem;
+	height: 2.4rem;
+}
+.ux-icon-unchecked-circle {
+	mask-image: var(--icon-unchecked-circle);
+	-webkit-mask-image: var(--icon-unchecked-circle);
+	background-color: var(--dark3);
+	width: 2.4rem;
+	height: 2.4rem;
+}
+/* Selected Circle */
+.ux-icon-selected-circle {
+	mask-image: var(--icon-selected-circle);
+	-webkit-mask-image: var(--icon-selected-circle);
+	background-color: var(--color1);
+	width: 2.4rem;
+	height: 2.4rem;
+}
+/* UnSelected Circle */
+.ux-icon-unselected-circle {
+	mask-image: var(--icon-unselected-circle);
+	-webkit-mask-image: var(--icon-unselected-circle);
+	background-color: var(--dark3);
+	width: 2.4rem;
+	height: 2.4rem;
+}
+/* Arrow Right */
+.ux-icon-arrow-right {
+	mask-image: var(--icon-arrow-right);
+	-webkit-mask-image: var(--icon-arrow-right);
+	background-color: var(--light3);
+	width: 1.6rem;
+	height: 1.6rem;
 }
