--- a/src/assets/css/components/base/UxInput.css
+++ b/src/assets/css/components/base/UxInput.css
@@ -89,3 +89,6 @@
 .ux-group.field.disabled .ux-input {
 	background-color: transparent;
 }
+.ux-group.field .ux-select + .ux-input {
+	padding-left: 0;
+}
