--- a/src/assets/css/components/base/UxFile.css
+++ b/src/assets/css/components/base/UxFile.css
@@ -7,6 +7,7 @@
 	height: 4rem;
 	border-radius: .8rem;
 	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light0);
 	transition: box-shadow .1s ease-in-out;
 }
 .ux-file .ux-file-base {
