--- a/src/assets/css/components/base/UxInput.css
+++ b/src/assets/css/components/base/UxInput.css
@@ -7,6 +7,7 @@
 	height: 4rem;
 	border-radius: .8rem;
 	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light0);
 	transition: box-shadow .1s ease-in-out;
 }
 .ux-input .ux-input-base {
@@ -84,6 +85,7 @@
 /* UxInput in UxGroup */
 .ux-group.field .ux-input {
 	box-shadow: none;
+	background-color: transparent;
 }
 .ux-group.field.readonly .ux-input,
 .ux-group.field.disabled .ux-input {
