--- a/src/assets/css/components/base/UxPassword.css
+++ b/src/assets/css/components/base/UxPassword.css
@@ -7,6 +7,7 @@
 	height: 4rem;
 	border-radius: .8rem;
 	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light0);
 	transition: box-shadow .1s ease-in-out;
 }
 /* UxPassword Focus */
@@ -57,6 +58,7 @@
 /* UxPassword in UxGroup */
 .ux-group.field .ux-password {
 	box-shadow: none;
+	background-color: transparent;
 }
 .ux-group.field.readonly .ux-password,
 .ux-group.field.disabled .ux-password {
