--- a/src/assets/css/components/base/UxTextarea.css
+++ b/src/assets/css/components/base/UxTextarea.css
@@ -9,6 +9,7 @@
 	min-height: 4rem;
 	border-radius: .8rem;
 	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light0);
 	transition: box-shadow .1s ease-in-out;
 }
 .ux-textarea .ux-textarea-base {
