--- a/src/assets/css/components/layout/UxContainer.css
+++ b/src/assets/css/components/layout/UxContainer.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	overflow-x: hidden;
-	/* overflow-y: auto; */
+	overflow-y: auto;
 	width: 100%;
 	height: 100%;
 }
