--- a/src/assets/css/components/mixin/UxCollapse.css
+++ b/src/assets/css/components/mixin/UxCollapse.css
@@ -4,6 +4,7 @@
 	border-radius: 1.6rem;
 	border: .1rem solid var(--light2);
 	box-shadow: 0 .1rem .5rem var(--light1);
+	background-color: var(--light0);
 }
 .ux-collapse .ux-collapse-base {
 	display: flex;
@@ -26,7 +27,7 @@
 .ux-collapse .ux-collapse-icon {
 	margin-left: auto;
 }
-.ux-collapse .ux-collapse-section {
+.ux-collapse .ux-collapse-panel {
 	overflow: hidden;
 	box-shadow: inset 0 0.1rem 0 var(--light1);
 	transition: max-height .15s ease;
