--- a/src/assets/css/components/mixin/UxGroup.css
+++ b/src/assets/css/components/mixin/UxGroup.css
@@ -79,6 +79,7 @@
 .ux-group.field {
 	border-radius: .8rem;
 	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light0);
 	transition: box-shadow .1s ease-in-out;
 }
 .ux-group.field:focus-within {
