--- a/src/assets/css/components/base/UxButton.css
+++ b/src/assets/css/components/base/UxButton.css
@@ -10,9 +10,9 @@
 	padding: 0 1.2rem;
 	width: 100%;
 	min-height: 3.6rem;
-	border-radius: .8rem;
-	background-color: var(--light0);
+	border-radius: 1rem;
 	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light0);
 	font-size: 1.6rem;
 	color: var(--dark1);
 	letter-spacing: 0;
@@ -25,6 +25,13 @@
 }
 .ux-button .ux-button-icon {
 	flex-shrink: 0;
+}
+/* UxButton Fill */
+.ux-button.fill .ux-button-base {
+	box-shadow: none;
+	background-color: var(--color1);
+	font-weight: 700;
+	color: var(--light0);
 }
 /* UxButton Icon */
 .ux-button.icon .ux-button-base {
@@ -39,6 +46,12 @@
 }
 .ux-button .ux-button-base:focus {
 	box-shadow: inset 0 0 0 .2rem var(--light3);
+}
+.ux-button.fill .ux-button-base:hover {
+	box-shadow: inset 0 0 0 .2rem rgba(183, 11, 74, .75);
+}
+.ux-button.fill .ux-button-base:focus {
+	box-shadow: inset 0 0 0 .2rem rgba(183, 11, 74, 1);
 }
 /* UxButton Disabled */
 .ux-button.disabled .ux-button-base,
