--- a/src/assets/css/components/base/UxPassword.css
+++ b/src/assets/css/components/base/UxPassword.css
@@ -57,6 +57,7 @@
 }
 /* UxPassword in UxGroup */
 .ux-group.field .ux-password {
+	flex-basis: 0;
 	box-shadow: none;
 	background-color: transparent;
 }
