--- a/src/assets/css/components/mixin/UxKeypad.css
+++ b/src/assets/css/components/mixin/UxKeypad.css
@@ -1,5 +1,6 @@
 /* UxKeypad */
 .ux-keypad {
+	width: 100%;
 	border-radius: 1.6rem;
 	box-shadow: 0 0.1rem 0.5rem var(--light1);
 	background-color: var(--light0);
