--- a/src/assets/css/components/mixin/UxCard.css
+++ b/src/assets/css/components/mixin/UxCard.css
@@ -1,13 +1,16 @@
 /* UxCard */
 .ux-card {
+	overflow: hidden;
+	width: 100%;
 	border-radius: 1.6rem;
 	box-shadow: 0 .1rem .5rem var(--light1);
 }
 .ux-card .ux-card-base {
 	padding: 1.6rem;
 	border-radius: 1.6rem;
-	background-color: var(--light0);
+	/* border: .1rem solid var(--light2); */
 	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light0);
 }
 /* UxCard Fill */
 .ux-card.fill {}
