--- a/src/assets/css/components/mixin/UxCollapse.css
+++ b/src/assets/css/components/mixin/UxCollapse.css
@@ -2,9 +2,6 @@
 .ux-collapse {
 	overflow: hidden;
 	width: 100%;
-	border-radius: 1.6rem;
-	border: .1rem solid var(--light2);
-	box-shadow: 0 .1rem .5rem var(--light1);
 	background-color: var(--light0);
 }
 .ux-collapse .ux-collapse-base {
@@ -35,4 +32,10 @@
 }
 .ux-collapse .ux-collapse-article {
 	padding: 1.2rem 1.6rem;
+}
+/* UxKeypad in UxCard*/
+.ux-card .ux-collapse {
+	margin: -1.6rem;
+	width: initial;
+	background-color: transparent;
 }
