--- a/src/assets/css/components/mixin/UxKeypad.css
+++ b/src/assets/css/components/mixin/UxKeypad.css
@@ -1,20 +1,22 @@
 /* UxKeypad */
 .ux-keypad {
 	width: 100%;
-	border-radius: 1.6rem;
-	box-shadow: 0 0.1rem 0.5rem var(--light1);
 	background-color: var(--light0);
 }
 .ux-keypad .ux-keypad-base {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	padding: 1.6rem 0;
-	border-radius: 1.6rem;
-	box-shadow: inset 0 0 0 .1rem var(--light2);
 }
 .ux-keypad .ux-keypad-button {
 	padding: .8rem 0;
 }
 .ux-keypad .ux-keypad-label {
 	pointer-events: none;
+}
+/* UxKeypad in UxCard*/
+.ux-card .ux-keypad {
+	margin: -1.6rem;
+	width: initial;
+	background-color: transparent;
 }
