--- a/src/assets/css/components/mixin/UxPagination.css
+++ b/src/assets/css/components/mixin/UxPagination.css
@@ -1,2 +1,36 @@
 /* UxPagination */
-.ux-pagination {}
+.ux-pagination {
+	width: 100%;
+}
+.ux-pagination-base {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: .8rem;
+}
+.ux-pagination-page {}
+.ux-pagination-page .ux-button-base {
+	padding: 0 0.4rem;
+	min-width: 2.4rem;
+	min-height: 2.4rem;
+	color: var(--light3);
+}
+.ux-pagination-page.selected .ux-button-base {
+	font-weight: 800;
+	color: var(--color1);
+}
+.ux-pagination-page .ux-button-base,
+.ux-pagination-page .ux-button-base:hover,
+.ux-pagination-page .ux-button-base:focus {
+	border-radius: 0;
+	box-shadow: none;
+	background-color: none;
+}
+.ux-pagination-prev.disabled {
+	opacity: 0.5;
+	pointer-events: none;
+}
+.ux-pagination-next.disabled {
+	opacity: 0.5;
+	pointer-events: none;
+}
